--- a/WSCol/src/log4j.properties
+++ b/WSCol/src/log4j.properties
@@ -12,4 +12,4 @@ log4j.appender.APPENDER_FILE.File=./log/wscol.log
 log4j.appender.APPENDER_FILE.MaxFileSize=100KB
 log4j.appender.APPENDER_FILE.MaxBackupIndex=1
 log4j.appender.APPENDER_FILE.layout=org.apache.log4j.PatternLayout
-log4j.appender.APPENDER_FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %p [%C:%L] - %m%
+log4j.appender.APPENDER_FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %p [%C:%L] - %m%n
