--- a/WSCol/.classpath
+++ b/WSCol/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="/media/DATI/Documenti/Code/Git/WsCol - App/WSCol/lib/WSCol.jar"/>
-	<classpathentry kind="lib" path="/media/DATI/Documenti/Code/XText/Workspace/org.xtext.example.xpt/lib/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/WSCol.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
